[tool.poetry]
name = "public-habit-tracker"
version = "0.1.0"
description = "Telegram bot for habit tracking with collaboration features"
authors = ["m-danya <danila-mikh@ya.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pht"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
aiogram = "^2.25.1"
redis = "^4.5.4"
loguru = "^0.7.0"
peewee = "^3.16.0"
psycopg2-binary = "^2.9.6"
bestconfig = "^1.3.5"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
